--- a/style.css
+++ b/style.css
@@ -59,27 +59,6 @@ p {
   cursor: sw-resize;
 }
 
-.trash {
-  z-index: -1;
-  position: absolute;
-  padding: 10px;
-  text-align: center;
-  height: 100px;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  background-color: rgb(241, 77, 77);
-  color: white;
-}
-
-.trash-hovered {
-  background-color: #dd7474;
-}
-
-.dimension {
-  padding: 5px 0 5px;
-}
-
 .menu-area {
   display: flex;
   padding: 20px 0;
@@ -87,4 +66,24 @@ p {
 
 .form-input-area {
   padding: 0 10px 0;
+}
+
+.btn-primary {
+  border: #7490dd;
+  background-color: #7490dd;
+  padding: 5px 10px;
+  color: white;
+}
+
+.btn-trash {
+  border: #f82407;
+  background-color: #f82407;
+  padding: 5px 10px;
+  color: white;
+}
+
+.opt-select {
+  border: none;
+  padding: 4px 10px;
+
 }
